Mobile alignment navbar fixes

--- a/_sass/components/header/_header.scss
+++ b/_sass/components/header/_header.scss
@@ -55,9 +55,11 @@
 
 @media screen and (max-width: 800px) {
     .masthead {
+        padding-left: 24px;
+
         .mobile__hamburger {
             position: absolute;
-            right: 62px;
+            right: 46px;
             top: 32%;
             z-index: 110;
             width: 25px;
@@ -82,7 +84,7 @@
         width: 100%;
         height: 100%;
         top: 54px;
-        left: -22px;
+        left: -19px;
         padding-inline-start: 0;
         background: rgba(0, 0, 0, 0.9);
         z-index: 110;
